# rustapicsdemo

./: .env  .gitignore  Cargo.toml
src/: main.rs  string.txt
src/controllers/: mod.rs  user_controller.rs
src/db/: db.rs
src/models/: product.rs  user.rs
src/routes/: user_routes.rs
src/services/: user_services.rs
src/views/: user_view.rs
