[package]
name = "csacademyioserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"                       # Web framework
tokio = { version = "1", features = ["full"] }  # Async runtime
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] } # PostgreSQL support
bcrypt = "0.12"                    # Bcrypt
serde = { version = "1.0", features = ["derive"] } # Serialization/Deserialization
uuid = { version = "1.3" } 
cuid = "^1.0.0"
mongodb = "3.1.1"
bson = "2.0"     
futures = "0.3.28"
